--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -197,6 +197,25 @@ tr:last-child td {
   height: auto !important;
 }
 
+
+
+/* Prevents cut-off look */
+.learner-card {
+  overflow: visible !important;
+  height: auto !important;
+  page-break-before: always;   /* each learner starts on new page */
+}
+
+.learner-card:first-child {
+  page-break-before: auto;     /* first learner should not create blank page */
+}
+
+/* force tables to page 2 */
+.learner-summary-page {
+  page-break-before: always;
+}
+
+  
 </style>
 
   
@@ -1628,23 +1647,28 @@ clone.querySelectorAll(".a4-page").forEach(page => {
       </div>
     `;
 
-    const secondPageContainer = document.createElement("div");
-    // FIX: avoid-all mode handles the break better than a forced "always" on a sub-element
-   
+    // --- SECOND PAGE (TABLES ONLY) ---
+const secondPageContainer = document.createElement("div");
+secondPageContainer.className = "learner-summary-page";
 
-    table.style.fontSize = "16px";
-    table.querySelectorAll("td, th").forEach(cell => { cell.style.padding = "10px 6px"; });
+// table styling
+table.style.fontSize = "16px";
+table.querySelectorAll("td, th").forEach(cell => {
+  cell.style.padding = "10px 6px";
+});
 
-    generalBlock.style.fontSize = "16px";
-    generalBlock.style.lineHeight = "2";
+// general block styling
+generalBlock.style.fontSize = "16px";
+generalBlock.style.lineHeight = "2";
 
-    secondPageContainer.appendChild(table);
-    secondPageContainer.appendChild(generalBlock);
+// put BOTH tables on page 2
+secondPageContainer.appendChild(table);
+secondPageContainer.appendChild(generalBlock);
 
-    card.appendChild(summaryBlock);
-    card.appendChild(secondPageContainer);
-    card.appendChild(footer);
-  });
+// --- BUILD LEARNER CARD ---
+card.appendChild(summaryBlock);        // PAGE 1 content
+card.appendChild(secondPageContainer); // PAGE 2 content (forced)
+card.appendChild(footer);
 
 
     
