--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -1383,8 +1383,7 @@ function getTrend(currentAvg, previousAvg) {
 
 
 
-  window.downloadPDF = async function () {
-
+window.downloadPDF = async function () {
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
     return;
@@ -1393,40 +1392,37 @@ function getTrend(currentAvg, previousAvg) {
   const term = termSelect.options[termSelect.selectedIndex]?.text || "Term";
   const filename = `Summary_Report_${term}_${SYSTEM_YEAR}.pdf`;
 
-const original = reportDiv;  // your main container
-const clone = original.cloneNode(true);
+  const original = reportDiv; // your main container
+  const clone = original.cloneNode(true);
 
-// Remove screen pagination wrappers (.a4-page)
-clone.querySelectorAll(".a4-page").forEach(page => {
-  const parent = page.parentNode;
-  while (page.firstChild) {
-    parent.insertBefore(page.firstChild, page);
-  }
-  parent.removeChild(page);
-});
+  // ===== REMOVE SCREEN PAGINATION WRAPPERS (.a4-page) =====
+  clone.querySelectorAll(".a4-page").forEach(page => {
+    const parent = page.parentNode;
+    while (page.firstChild) {
+      parent.insertBefore(page.firstChild, page);
+    }
+    parent.removeChild(page);
+  });
 
-
-  // ===== A4 Layout =====
+  // ===== A4 LAYOUT =====
   clone.style.width = "190mm";
   clone.style.margin = "0 auto";
   clone.style.padding = "0";
   clone.style.boxSizing = "border-box";
 
-  // ===== Remove Detailed Sections =====
+  // ===== REMOVE DETAILED SECTIONS =====
   clone.querySelectorAll(".subject-block, .trend-box").forEach(el => el.remove());
 
   const cards = clone.querySelectorAll(".learner-card");
 
-  // ===== GET SCHOOL INFO =====
+  // ===== SCHOOL HEADER =====
   const first = results?.[0];
-
   if (first) {
     const header = document.createElement("div");
     header.style.textAlign = "center";
     header.style.marginBottom = "10px";
     header.style.paddingBottom = "8px";
     header.style.borderBottom = "1px solid #000";
-
     header.innerHTML = `
       <div style="font-size:18px;font-weight:bold;">
         ${first.school_name?.toUpperCase() || ""}
@@ -1444,14 +1440,12 @@ clone.querySelectorAll(".a4-page").forEach(page => {
     clone.prepend(header);
   }
 
-  // ===== STYLE CARDS + ADD FOOTER =====
+  // ===== STUDENT CARDS =====
   cards.forEach(card => {
-    // FIX: Ensure the entire student report doesn't get split awkwardly
     card.style.margin = "0";
     card.style.padding = "0";
     card.style.boxSizing = "border-box";
-   
-   
+
     const footer = document.createElement("div");
     footer.style.fontSize = "10px";
     footer.style.color = "#555";
@@ -1480,90 +1474,40 @@ clone.querySelectorAll(".a4-page").forEach(page => {
 
     let overallAvg = 0;
     if (subjectScores.length) {
-      const total = subjectScores.reduce((sum, score) => sum + score, 0);
-      overallAvg = total / subjectScores.length;
+      overallAvg = subjectScores.reduce((sum, score) => sum + score, 0) / subjectScores.length;
     }
     overallAvg = Number(overallAvg.toFixed(2));
-
-    // ===== EXTRACT TREND, STRENGTHS & NEEDS =====
-    let trendText = "";
-    let strengthsText = "";
-    let needsText = "";
-
-    const trendElement = Array.from(card.querySelectorAll("p"))
-      .find(p => p.innerText.includes("📊 Progress Trend"));
-
-    if (trendElement) {
-      trendText = trendElement.innerText.replace("📊 Progress Trend:", "").trim();
-    }
-
-    const strongElems = card.querySelectorAll(".split-block p strong");
-    strongElems.forEach(el => {
-      const text = el.innerText;
-      const parentText = el.parentNode?.innerText || "";
-      if (!strengthsText && text.includes("💪 Strengths")) {
-        strengthsText = parentText.replace("💪 Strengths:", "").trim();
-      } else if (!needsText && text.includes("🎯 Areas for Improvement")) {
-        needsText = parentText.replace("🎯 Areas for Improvement:", "").trim();
-      }
-    });
-
-    strengthsText = strengthsText.replace(/Life Skills, English, Kiswahili/g, "").trim();
-
-    const summaryBlock = document.createElement("div");
-    summaryBlock.style.marginBottom = "6px";
-    summaryBlock.style.fontSize = "11px";
-    summaryBlock.innerHTML = ``;
-
-    // ===== HELPER FUNCTIONS =====
-    function overallLevel(score) {
-      if (!score || score < 1) return "No Data";
-      if (score >= 3.5) return "Exceeding Expectations";
-      if (score >= 2.5) return "Meeting Expectations";
-      if (score >= 1.5) return "Approaching Expectations";
-      return "Below Expectations";
-    }
-
-    function generalComment(score) {
-      if (score >= 3.5) return "Excellent performance. Keep it up.";
-      if (score >= 2.5) return "Good progress. Continue working hard.";
-      if (score >= 1.5) return "Fair work. Aim higher next term.";
-      return "Needs more effort and support.";
-    }
-
-    function commentFromScore(score) {
-      if (score >= 3.5) return "Excellent work";
-      if (score >= 2.5) return "Good progress";
-      if (score >= 1.5) return "Fair work";
-      return "Put more effort";
-    }
 
     // ===== SUBJECT TABLE =====
     const table = document.createElement("table");
     table.style.width = "100%";
     table.style.borderCollapse = "collapse";
     table.style.marginTop = "6px";
-    table.style.fontSize = "12px";
+    table.style.fontSize = "16px";
     table.style.tableLayout = "fixed";
-
     table.innerHTML = `
       <thead>
         <tr>
-          <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area/Subject</th>
-          <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
-          <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
-          <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
+          <th style="border:1px solid #000;padding:10px 6px;width:30%;">Learning Area/Subject</th>
+          <th style="border:1px solid #000;padding:10px 6px;width:15%;">Score</th>
+          <th style="border:1px solid #000;padding:10px 6px;width:25%;">Performance Level</th>
+          <th style="border:1px solid #000;padding:10px 6px;width:30%;">Teacher Comment</th>
         </tr>
       </thead>
       <tbody>
         ${Object.entries(subjectData).map(([subject, d]) => {
           const avg = Number(d.average_score);
+          let comment = "Put more effort";
+          if (avg >= 3.5) comment = "Excellent work";
+          else if (avg >= 2.5) comment = "Good progress";
+          else if (avg >= 1.5) comment = "Fair work";
+
           return `
             <tr>
-              <td style="border:1px solid #000;padding:6px;">${subject}</td>
-              <td style="border:1px solid #000;padding:6px;text-align:center;">${avg.toFixed(2)}</td>
-              <td style="border:1px solid #000;padding:6px;">${d.achievement_level}</td>
-              <td style="border:1px solid #000;padding:6px;">${commentFromScore(avg)}</td>
+              <td style="border:1px solid #000;padding:10px 6px;">${subject}</td>
+              <td style="border:1px solid #000;padding:10px 6px;text-align:center;">${avg.toFixed(2)}</td>
+              <td style="border:1px solid #000;padding:10px 6px;">${d.achievement_level}</td>
+              <td style="border:1px solid #000;padding:10px 6px;">${comment}</td>
             </tr>
           `;
         }).join("")}
@@ -1573,7 +1517,21 @@ clone.querySelectorAll(".a4-page").forEach(page => {
     // ===== GENERAL PERFORMANCE BLOCK =====
     const generalBlock = document.createElement("div");
     generalBlock.style.marginTop = "10px";
-    generalBlock.style.fontSize = "12px";
+    generalBlock.style.fontSize = "16px";
+    generalBlock.style.lineHeight = "2";
+    function overallLevel(score) {
+      if (!score || score < 1) return "No Data";
+      if (score >= 3.5) return "Exceeding Expectations";
+      if (score >= 2.5) return "Meeting Expectations";
+      if (score >= 1.5) return "Approaching Expectations";
+      return "Below Expectations";
+    }
+    function generalComment(score) {
+      if (score >= 3.5) return "Excellent performance. Keep it up.";
+      if (score >= 2.5) return "Good progress. Continue working hard.";
+      if (score >= 1.5) return "Fair work. Aim higher next term.";
+      return "Needs more effort and support.";
+    }
 
     generalBlock.innerHTML = `
       <table style="width:100%;border-collapse:collapse;margin-top:6px;">
@@ -1598,26 +1556,19 @@ clone.querySelectorAll(".a4-page").forEach(page => {
       </div>
     `;
 
-    const secondPageContainer = document.createElement("div");
-    // FIX: avoid-all mode handles the break better than a forced "always" on a sub-element
-   
+    // ===== WRAP TABLE + GENERAL BLOCK INTO PAGE-BREAK CONTAINER =====
+    const secondPageWrapper = document.createElement("div");
+    secondPageWrapper.className = "split-block";
+    secondPageWrapper.style.pageBreakBefore = "always";
+    secondPageWrapper.style.pageBreakInside = "avoid";
 
-    table.style.fontSize = "16px";
-    table.querySelectorAll("td, th").forEach(cell => { cell.style.padding = "10px 6px"; });
+    secondPageWrapper.appendChild(table);
+    secondPageWrapper.appendChild(generalBlock);
 
-    generalBlock.style.fontSize = "16px";
-    generalBlock.style.lineHeight = "2";
-
-    secondPageContainer.appendChild(table);
-    secondPageContainer.appendChild(generalBlock);
-
-    card.appendChild(summaryBlock);
-    card.appendChild(secondPageContainer);
+    card.appendChild(secondPageWrapper);
     card.appendChild(footer);
   });
 
-
-    
   // ===== EXPORT PDF =====
   html2pdf().set({
     margin: [10, 10, 10, 10],
@@ -1625,12 +1576,13 @@ clone.querySelectorAll(".a4-page").forEach(page => {
     image: { type: "jpeg", quality: 0.98 },
     html2canvas: { scale: 2, scrollY: 0, useCORS: true, letterRendering: true },
     jsPDF: { unit: "mm", format: "a4", orientation: "portrait" },
-    // THE FIX: mode 'avoid-all' prevents cutting text and tables across pages
-   pagebreak: { mode: ['css'] }
-
+    pagebreak: { mode: ['css'] }
   }).from(clone).save();
 };
 
+
+
+  
 window.downloadDetailedPDF = async function () {
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
